--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0px;
+}
 .container{
     display: flex;
     flex-wrap: wrap;
@@ -21,4 +24,6 @@ h1{
     border-right: 2px solid pink;
     width: 400px;
     text-align: center;
+    box-shadow: 4px 4px 5px #888888;
+    margin-top: 10px;
 }
